src/test/deca/context/invalid/sansObj/plus-string.deca
// Description:
//    Addition d'un int et d'un string
//
// Résultat:
//Opération entre 2 objets de types incompatibles

{
   int a;
   // Doit etre refuse.
   a = a + "non-nombre";
}